# landale

./: .dockerignore  .env  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .tool-versions  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  STANDARDS.md  biome.json  bun.lockb  docker-compose.yml  eslint.config.js  eslint.config.mjs  index.d.ts  next.config.js  ngrok.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  scenes.json  server.js  server.ts  start.sh  tailwind.config.js  tailwind.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.node.json  (+4 more)
.github/workflows/: ci-dashboard.yml  ci-elixir.yml  ci-nurvus.yml  ci-python.yml  ci-server.yml  ci-typescript.yml  ci.yml  deploy.yml
app/: main.ts  preload.ts
apps/analysis/: .env.example  README.md  pyproject.toml  requirements.txt  start.py
apps/analysis/src/: __main__.py  correlator.py  events.py  health.py  lms_client.py  main.py  service_config.py  transcription_client.py  websocket_client.py
apps/audio-receiver/: Dockerfile  package.json
apps/dashboard/: DEBUG_COMMANDS.md  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/nurvus/: .credo.exs  .gitignore  .tool-versions  API.md  DEPLOYMENT.md  README.md  build.sh  mix.exs
apps/overlays/: Dockerfile  README.md  bunfig.toml  eslint.config.mjs  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  turbo.json  vite.config.ts  vitest.config.ts
apps/phononmaser/: .env.example  LM_STUDIO_INTEGRATION.md  README.md  eslint.config.mjs  package.json  pyproject.toml  requirements.txt  run.py  test_run.py  test_websocket.py  tsconfig.json
apps/phononmaser-ts/: package.json
apps/phononmaser/src/: __init__.py  __main__.py  adaptive_chunker.py  audio-processor.ts  audio_processor.py  events-extended.ts  events.py  events.ts  health.py  index.ts  lm-studio-consumer-example.ts  lm-studio-service.ts  logger.py  main.py  microphone_profiles.py  overlap_detector.py  prompt_manager.py  ring_buffer_audio_processor.py  server_client.py  service_config.py  silero_vad.py  sliding_window_buffer.py  testable_audio_processor.py  thread_safe_audio_processor.py  timestamp_utils.py  websocket_client.py  websocket_server.py  whisper-service.ts
apps/phononmaser/src/domains/: __init__.py  audio_processing.py
apps/phononmaser/src/events/: events-extended.ts  events.ts  index.ts
apps/phononmaser/src/examples/: lm-studio-consumer-example.ts
apps/phononmaser/src/lib/: logger.ts
apps/phononmaser/src/services/: audio-processor.ts  index.ts  lm-studio-service.ts  whisper-service.ts
apps/phononmaser/tests/: analyze_voice_characteristics.py  conftest.py  test_adaptive_chunking.py  test_audio_buffer_memory_demo.py  test_audio_buffer_memory_management.py  test_audio_processor_prompt_caching.py  test_audio_processor_prompt_integration.py  test_main_service_prompt_integration.py  test_memory_optimization.py  test_overlap_detection.py  test_phoenix_integration.py  test_prompt_manager.py  test_prompt_manager_mocks.py  test_prompt_safety_features.py  test_real_audio_infrastructure.py  test_ring_buffer.py  test_silero_vad.py  test_sliding_window.py  test_thread_safe_audio_buffer.py  test_timestamp_conversion.py  test_transcription_timestamp.py  test_websocket_client.py  test_websocket_client_factory.py  test_websocket_resilience.py
apps/phononmaser/tests/domains/: test_audio_processing.py
apps/phononmaser/tests/fixtures/: generate_test_audio.py
apps/seed/: .env.example  IMPROVEMENTS.md  README.md  main.py  package.json  pyproject.toml  requirements.txt  run.py  start.py
apps/seed/src/: __init__.py  __main__.py  community.py  community_api.py  config.py  context_client.py  correlator.py  dataset_exporter.py  events.py  health.py  lms_client.py  logger.py  main.py  quotes_api.py  quotes_integration.py  rag_handler.py  rag_lms_client.py  rag_websocket.py  service_config.py  text_analysis.py  text_analysis_exceptions.py  text_analysis_schema.py  text_preprocessors.py  training_cli.py  training_pipeline.py  transcription_client.py  vocabulary_extractor.py  websocket_base.py  websocket_client.py
apps/seed/src/domains/: __init__.py  correlation_analysis.py
apps/seed/tests/: conftest.py  test_correlator.py  test_transcription_client.py  test_websocket_resilience.py
apps/seed/tests/domains/: test_correlation_analysis.py
assets/: scenes.json
backend/: .env  event-handler.ts  index.ts  package.json  socket-handler.ts  tsconfig.json  websockets.ts
components/: grid.tsx  icons.tsx  notification.tsx
config/: config.exs
docs/: PRE_COMMIT_SETUP.md  websocket-resilience.md
ecosystem/: README.md  ecosystem.alys.config.cjs  ecosystem.demi.config.cjs  ecosystem.demi.config.js  ecosystem.saya.config.cjs  ecosystem.saya.config.js  ecosystem.zelan.config.cjs  ecosystem.zelan.config.js  saya.docker-compose.md  zelan.config.cjs  zelan.supervisord.conf
electron/: index.ts  package.json  server.ts
handbook/: 00_README.md
hooks/: index.ts  use-channel.ts  use-event.ts  use-obs.ts  use-queue.ts  use-rainwave.ts  use-socket-event.ts  use-socket.ts  use-stream.ts  use-twitch-event.ts
lib/: game.controller.ts  games.ts  index.ts  obs.controller.ts  server.ts  socket.controller.ts  stream.controller.ts  twitch.controller.ts  twitch.types.ts
logger/: index.ts
overlays/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
pages/: _app.tsx  _document.tsx  index.tsx
renderer/: package.json  stitches.config.ts  tsconfig.json
scripts/: README.md  analyze-logs.ts  cache-emotes.ts  check-critical-tests.sh  check-health.ts  docker-cache-emotes.sh  generate_encryption_key.sh  manage-services.ts  move-binary.js  setup-pre-commit.sh  setup-python-services.sh  tsconfig.json  watch-health.sh
server/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bizhawk.rs  main.rs  obs.rs
styles/: globals.css
(+875 files in other folders)
