[project]
name = "landale-workspace"
version = "0.1.0"
description = "Development tools for Landale workspace"
requires-python = ">=3.12"
dependencies = [
    "lmstudio>=1.4.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.9.0",
]

[tool.uv.workspace]
members = [
    "apps/phononmaser",
    "apps/seed",
    "packages/shared-python",
]
