[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
anyhow = "1.0.44"
axum = { version = "0.6.20" }
dotenvy = "0.15.7"
env_logger = "0.10.1"
futures-util = "0.3.29"
log = "0.4.20"
obws = { version = "0.11.5", features = ["events"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socketioxide = { git = "https://github.com/Totodore/socketioxide" }
tauri = { version = "1.5.1", features = ["system-tray"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.14"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
