[project]
name = "landale-phononmaser"
version = "0.1.0"
description = "Audio processing and transcription service for Landale"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13.0",
    "numpy>=1.26",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "structlog>=24.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "shared",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "ruff>=0.6",
    "psutil>=5.9",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

