[project]
name = "landale-seed"
version = "0.1.0"
description = "AI companion memory intelligence layer that aggregates audio fragments into meaningful contexts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.1",
]
