[project]
name = "landale-seed"
version = "0.1.0"
description = "AI companion memory intelligence layer that aggregates audio fragments into meaningful contexts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9,<4.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "websockets>=15.0,<16.0",
    "structlog>=24.1.0,<25.0",
    "shared",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=1.0,<2.0",
    "ruff>=0.1.0,<1.0",
]

[tool.uv.sources]
shared = { workspace = true }

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
